# sentinelnet

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  SUBMISSION.md  _seed_virtuals.py  agent.json  agent_log.json  api.py  config.py  db.py  demo.py  logging_config.py  main.py  requirements.txt  rpc_provider.py
agent/: __init__.py  alerts.py  chain.py  circuit_breaker.py  contagion.py  discovery.py  eas.py  erc8004.py  graph.py  paymaster.py  publisher.py  sybil.py  trust_engine.py  validator.py  verification_check.py  virtuals.py
contracts/: SentinelNetStaking.sol  TrustGate.sol  TrustGatedMarketplace.sol  foundry.toml  hardhat.config.js  package-lock.json  package.json
dashboard/: agent.html  demo.html  docs.html  graph.html  index.html  landing.html  leaderboard.html  marketplace.html  methodology.html
landing/: package-lock.json  package.json  tailwind.config.ts
mcp/: server.py
scripts/: boost_self_reputation.py  bulk_trustgate_paymaster.py  cdp_fund_and_deploy.py  coinbase_transfer.py  deploy_staking_v2.py  gen_og_image.py  paymaster_deploy.py  paymaster_deploy_v2.py  paymaster_deploy_v3.py  push_bulk_scores.py  push_scores_onchain.py  register_new_agent.py  setup_onchain.py  test_paymaster.py
sdk/python/: README.md  pyproject.toml
sdk/python/sentinelnet/: __init__.py  client.py
tests/: conftest.py  test_activity.py  test_alerts.py  test_analyzers.py  test_anomalies.py  test_api.py  test_chain.py  test_config.py  test_contagion.py  test_counterparty.py  test_db.py  test_discovery.py  test_erc8004.py  test_graph.py  test_mcp.py  test_sybil.py  (+5 more)
(+37 files in other folders)
