[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinelnet"
version = "0.1.0"
description = "Python SDK for SentinelNet — autonomous reputation scoring for ERC-8004 agents on Base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]
keywords = ["erc-8004", "trust", "reputation", "agents", "base", "blockchain"]
authors = [{name = "Ridwan Nurudeen"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://sentinelnet.gudman.xyz"
Repository = "https://github.com/Ridwannurudeen/sentinelnet"
Documentation = "https://sentinelnet.gudman.xyz/docs-guide"
